# ZeroClient

./: .gitmodules  CMakeLists.txt  hello.rb  main.cfg  main.cpp
CMake/: FindZero.cmake
